--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <title>Alien Game</title>
     <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body style="background-color: black;">
     <script type='text/javascript'>
 
         var CANVAS_WIDTH = 888;
         var CANVAS_HEIGHT = 480;
         var FPS = 30;
+
+        var stop = false;
 
         var spaceship = {
           x: 50,
@@ -200,58 +202,63 @@
         }, false);
 
         function update() {
+          if (!stop) {
+            if (32 in keysDown) {
+              spaceship.shoot();
+            }
+            if (38 in keysDown) {
+              spaceship.y -= 5;
+            }
+            if (40 in keysDown) {
+              spaceship.y += 5;
+            }
+            if (37 in keysDown) {
+              spaceship.x -= 5;
+            }
+            if (39 in keysDown) {
+              spaceship.x += 5;
+            }
 
-          if (32 in keysDown) {
-            spaceship.shoot();
-          }
-          if (38 in keysDown) {
-            spaceship.y -= 5;
-          }
-          if (40 in keysDown) {
-            spaceship.y += 5;
-          }
-          if (37 in keysDown) {
-            spaceship.x -= 5;
-          }
-          if (39 in keysDown) {
-            spaceship.x += 5;
-          }
+            spaceship.x = spaceship.x.between(0, CANVAS_WIDTH - spaceship.width);
+            spaceship.y = spaceship.y.between(0, CANVAS_HEIGHT - spaceship.height);
 
-          spaceship.x = spaceship.x.between(0, CANVAS_WIDTH - spaceship.width);
-          spaceship.y = spaceship.y.between(0, CANVAS_HEIGHT - spaceship.height);
+            Lasers.forEach(function(laser) {
+              laser.update();
+            });
 
-          Lasers.forEach(function(laser) {
-            laser.update();
-          });
+            Lasers = Lasers.filter(function(laser) {
+              return laser.active;
+            });
 
-          Lasers = Lasers.filter(function(laser) {
-            return laser.active;
-          });
+            blues.forEach(function(blue) {
+              blue.update();
+            });
 
-          blues.forEach(function(blue) {
-            blue.update();
-          });
+            blues = blues.filter(function(blue) {
+              return blue.active;
+            });
 
-          blues = blues.filter(function(blue) {
-            return blue.active;
-          });
+            reds.forEach(function(red) {
+              red.update();
+            });
 
-          reds.forEach(function(red) {
-            red.update();
-          });
+            reds = reds.filter(function(red) {
+              return red.active;
+            });
 
-          reds = reds.filter(function(red) {
-            return red.active;
-          });
+            handleCollisions();
 
-          handleCollisions();
+            if(Math.random() < 0.1) {
+              blues.push(Blue());
+            }
 
-          if(Math.random() < 0.1) {
-            blues.push(Blue());
-          }
+            if(Math.random() < 0.1) {
+              reds.push(Red());
+            }
 
-          if(Math.random() < 0.1) {
-            reds.push(Red());
+            if (bluesDestroyed < 0) {
+              gameOver();
+            }
           }
         }
 
@@ -312,6 +319,10 @@
 
         var bluesDestroyed = 0;
 
+        // if (bluesDestroyed < 0) {
+        //   document.location.reload(true);
+        // };
+
         function handleCollisions() {
           Lasers.forEach(function(laser) {
             blues.forEach(function(blue) {
@@ -346,13 +357,33 @@
           });
         }
 
+        function gameOver() {
+          stop = true;
+        }
+
+
 
     </script>
-    <p>
+    <div id="game-over" style="
+        display: none;
+        text-align: center;
+        padding-top: 92px;
+        z-index: 1;
+        width: 600px;
+        height: 360px;
+        overflow: auto;
+        margin: auto;
+        position: absolute;
+        color: white">
+      <h2>Game Over!</h2>
+      <a href="javascript:void(0)" class="button restart">Try again?</a>
+    </div>
+    <p style="color: green;">
       You can shoot ships by pressing the space bar, but you can only <br/>
       get points by colliding with blue alien ships. If you collide with <br/>
-      red alien ships, your points decrease. <br/><br/>
-      Use arrow keys to move left, right, up and down.
+      red alien ships, your points decrease. If your points go below zero, you lose.<br/><br/>
+      Use arrow keys to move left, right, up and down.<br/><br/>
+      Refresh the page to play again.
     </p>
   </body>
 </html>
