--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <style media="screen">
+      @font-face { font-family: UniversalJack; src: url('universaljack.ttf');}
       body {
-        font-family: Helvetica;
-        font-size: 10pt;
+        font-family: UniversalJack;
+        font-size: 14pt;
       }
     </style>
-    <title>Alien Game</title>
+    <title>Alien Collision</title>
     <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
   </head>
-  <body style="background-color: black;">
+  <body style="background-color: black; text-align: center; color: green;">
+    <h1>Alien Collision</h1>
     <script type='text/javascript'>
 
         var CANVAS_WIDTH = 888;
