--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       }
     </style>
     <title>Alien Collision</title>
-    <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
   </head>
-  <body style="background-color: black; text-align: center; color: green;">
+  <body style="background-color: black; text-align: center; color: green;"
+    onload="wrapper();">
     <h1>Alien Collision</h1>
     <script type='text/javascript'>
-
+      function wrapper(){
         var CANVAS_WIDTH = 888;
         var CANVAS_HEIGHT = 480;
         var FPS = 30;
@@ -41,7 +41,7 @@
 
           el.withinFrame = function() {
             return el.x >= 0 && el.x <= CANVAS_WIDTH &&
-              el.y >= 0 && el.y <= CANVAS_HEIGHT;
+            el.y >= 0 && el.y <= CANVAS_HEIGHT;
           };
 
           el.draw = function() {
@@ -81,7 +81,7 @@
 
           el.withinFrame = function() {
             return el.x >= 0 && el.x <= CANVAS_WIDTH &&
-              el.y >= 0 && el.y <= CANVAS_HEIGHT;
+            el.y >= 0 && el.y <= CANVAS_HEIGHT;
           };
 
           el.draw = function() {
@@ -125,7 +125,7 @@
 
           el.withinFrame = function() {
             return el.x >= 0 && el.x <= CANVAS_WIDTH &&
-              el.y >= 0 && el.y <= CANVAS_HEIGHT;
+            el.y >= 0 && el.y <= CANVAS_HEIGHT;
           };
 
           el.draw = function() {
@@ -179,10 +179,18 @@
         };
         spaceshipImage.src = "./images/noflames.png";
 
-        var canvasElement = $("<canvas width='" + CANVAS_WIDTH +
-          "' height='" + CANVAS_HEIGHT + "'></canvas");
-        var canvas = canvasElement.get(0).getContext("2d");
-        canvasElement.appendTo('body');
+        // document.body.onload = addElement;
+
+        var newCanvas = document.createElement("canvas");
+        newCanvas.setAttribute("id", "game");
+        newCanvas.setAttribute("width", CANVAS_WIDTH);
+        newCanvas.setAttribute("height", CANVAS_HEIGHT);
+        var currentElement = document.getElementById("paragraph");
+        document.body.insertBefore(newCanvas, currentElement);
+
+        var canvasElement = document.getElementById('game');
+        var canvas = canvasElement.getContext('2d');
+
 
         setInterval(function() {
           update();
@@ -315,9 +323,9 @@
 
         function collides(a, b) {
           return a.x < b.x + b.width &&
-            a.x + a.width > b.x &&
-            a.y < b.y + b.height &&
-            a.y + a.height > b.y;
+          a.x + a.width > b.x &&
+          a.y < b.y + b.height &&
+          a.y + a.height > b.y;
         }
 
         var bluesDestroyed = 0;
@@ -364,11 +372,9 @@
         function gameOver() {
           stop = true;
         }
-
-
-
+      }
     </script>
-    <p style="color: green;">
+    <p id="paragraph" style="color: green;">
       You can shoot ships by pressing the space bar, but you can only <br/>
       get points by colliding with blue alien ships. If you collide with <br/>
       red alien ships, your points decrease. If your points go below zero, you lose.<br/><br/>
